# Z_LION_AutoAim2025

./: LICENSE  README.md
src/auto_aim/: CMakeLists.txt  auto_aim.sln  auto_aim.vcxproj  auto_aim.vcxproj.filters
src/auto_aim/controler/: Controler.cpp  Controler.h  TransControler.h
src/auto_aim/controler/ShootStrategy/StrategyPlanner/: StrategyPlanner.h
src/auto_aim/detector/: TransDetector.h
src/auto_aim/detector/YoloModel/: YoloModel.cpp
src/auto_aim/node/: DetectorNode.cpp  ProcessorNode.cpp  SerialSendNode.cpp
src/auto_aim/processor/: Processor.cpp  Processor.h
src/auto_aim/processor/ArmorSolver/FaceAngleSolver/: FaceAngleSolver.h
src/auto_aim/processor/CarSolver/: AdaptiveEKF.h
src/auto_aim/processor/CarSolver/DataObserver/: DataObserver.h
src/auto_aim/processor/CarSolver/TranslationState/: TranslationState.cpp  TranslationState.h
src/auto_aim/processor/Coordinate/: Coordinate.h
src/auto_aim/processor/TargetPlanner/: TargetPlanner.h
src/auto_aim/sample/: debug.h  detect_test.cpp  process_test.cpp
src/auto_aim_bringup/config/: default.yaml
src/auto_aim_bringup/launch/: debug.py
src/auto_aim_debug/node/: auto_aim_debug_node.cpp
